# discord-retention-bot

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: audit.yml  ci.yml  release.yml  tags.yml
src/: bot.rs  config.rs  errors.rs  main.rs  run.rs
