[package]
name = "discord-retention-bot"
version = "1.0.1"
authors = ["Arne Bahlo <hallo@arne.me>"]
edition = "2018"
description = "A discord bot that allows you to set a retention for different channels."
repository = "https://github.com/bahlo/discord-retention-bot"
license = "MIT"
keywords = ["discord", "bot", "retention", "slack"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
log = "0.4.11"
env_logger = "0.8.2"
serenity = "0.9"
tokio = { version = "0.2", features = ["macros"] }
chrono = "0.4"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"