[package]
name = "discord-retention-bot"
version = "1.0.2"
authors = ["Arne Bahlo <hallo@arne.me>"]
edition = "2018"
description = "A bot that allows you to set a message retention for individual Discord text channels."
repository = "https://github.com/bahlo/discord-retention-bot"
license = "MIT"
keywords = ["discord", "bot", "retention", "slack"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
log = "0.4.11"
env_logger = "0.8.2"
serenity = { version = "0.10", default-features = false, features = ["builder", "client", "gateway", "http", "model", "rustls_backend"] }
tokio = { version = "1.6", features = ["macros", "time", "rt-multi-thread"] }
chrono = "0.4"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
tokio-test = "0.3"
serde_json = "1.0"
rand = "0.7"
